--- a/Nuevo/src/Presentacion/frmMenuPrincipal.form
+++ b/Nuevo/src/Presentacion/frmMenuPrincipal.form
@@ -100,11 +100,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nueva reserva"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miNuevaReservaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="miCancelarReserva">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cancelar reserva"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miCancelarReservaActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="miActualizarReserva">
               <Properties>
