--- a/Nuevo/src/Presentacion/ifrmVerInfoProveedores.form
+++ b/Nuevo/src/Presentacion/ifrmVerInfoProveedores.form
@@ -193,7 +193,6 @@
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="btnBuscarServicio" min="-2" pref="97" max="-2" attributes="0"/>
                               </Group>
-                              <Component id="jScrollPane3" pref="0" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="jlabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -208,6 +207,7 @@
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="lblImagenPerfil" min="-2" pref="200" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                       </Group>
@@ -254,7 +254,7 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="cmbServicios" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -370,7 +370,13 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="sitioWeb"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Cursor de Mano"/>
+            </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtSitioWebMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlabel8">
           <Properties>
@@ -397,12 +403,12 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="616" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="594" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="107" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="124" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
